<?xml version="1.0"?>
<package format="2">
  <name>frsm</name>
  <version>1.0.0</version>
  <description>The frsm package</description>
  <maintainer email="v.ivan@ed.ac.uk">Vladimir Ivan</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>bot_core</depend>
  <depend>bot_lcmgl</depend>
  <depend>frsm_lcmtypes</depend>
<!--  <depend>libglib-dev</depend>
  <depend>python-gtk2</depend>
  
  <depend>mesa-common-dev</depend>
  <depend>opengl</depend>
  <depend>glut</depend>
  <depend>libjpeg</depend>-->
</package>
